# ai-powered-code-remediation

./: README.md
.github/: dependabot.yml
.github/workflows/: semgrep.yml
ai-powered-remediation/: pyproject.toml
ai-powered-remediation/templates/: home.html  login.html  secret.html
intentionally-vulnerable-code/: main.py  pyproject.toml
